[project]
name = "entropix-smollm"
version = "0.1.0"
description = "Entropix sampler adapted to the SmolLLM"
authors = [
    { name = "Sinatras" }
]
dependencies = [
    "jupyter>=1.1.1",
    "torch>=2.5.0",
    "transformers>=4.45.2",
    "jax>=0.4.35",
    "ml-dtypes>=0.5.0",
    "plotly>=5.24.1",
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "blobfile>=3.0.0",
    "tiktoken>=0.8.0",
    "accelerate>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/entropix_smollm"]
